F1-6: some swagger added
