# docs/swagger.json
@@ -27,7 +27,7 @@
                 "summary": "Create Album",
                 "parameters": [
                     {
-                        "description": "album info",
+                        "description": "Album info",
                         "name": "album",
                         "in": "body",
                         "required": true,
@@ -44,7 +44,19 @@
                         }
                     },
                     "400": {
-                        "description": "Client error",
+                        "description": "Incorrect input",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "User unathorized",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "403": {
+                        "description": "User hasn't rights",
                         "schema": {
                             "$ref": "#/definitions/http.Error"
                         }
@@ -105,7 +117,13 @@
                         }
                     },
                     "400": {
-                        "description": "Client error",
+                        "description": "Incorrect input",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "User unathorized",
                         "schema": {
                             "$ref": "#/definitions/http.Error"
                         }
@@ -140,6 +158,18 @@
                             "$ref": "#/definitions/http.Error"
                         }
                     },
+                    "401": {
+                        "description": "User unathorized",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "403": {
+                        "description": "User hasn't rights",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
                     "500": {
                         "description": "Server error",
                         "schema": {
@@ -170,7 +200,7 @@
                         }
                     },
                     "400": {
-                        "description": "Client error",
+                        "description": "Bad request",
                         "schema": {
                             "$ref": "#/definitions/http.Error"
                         }
@@ -216,7 +246,13 @@
                         }
                     },
                     "400": {
-                        "description": "Client error",
+                        "description": "Incorrect body",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "User unathorized",
                         "schema": {
                             "$ref": "#/definitions/http.Error"
                         }
@@ -277,7 +313,7 @@
                         }
                     },
                     "400": {
-                        "description": "Client error",
+                        "description": "Incorrect body",
                         "schema": {
                             "$ref": "#/definitions/http.Error"
                         }
@@ -307,7 +343,19 @@
                         }
                     },
                     "400": {
-                        "description": "Client error",
+                        "description": "Incorrect body",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "User unathorized",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "403": {
+                        "description": "User hasn't rights",
                         "schema": {
                             "$ref": "#/definitions/http.Error"
                         }
@@ -377,7 +425,7 @@
                         }
                     },
                     "400": {
-                        "description": "Client error",
+                        "description": "Incorrect body",
                         "schema": {
                             "$ref": "#/definitions/http.Error"
                         }
@@ -550,7 +598,19 @@
                         }
                     },
                     "400": {
-                        "description": "Client error",
+                        "description": "Incorrect body",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "User unathorized",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "403": {
+                        "description": "User hasn't rights",
                         "schema": {
                             "$ref": "#/definitions/http.Error"
                         }
@@ -582,6 +642,12 @@
                             "items": {
                                 "$ref": "#/definitions/models.TrackTransfer"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Incorrect input",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
                         }
                     },
                     "500": {
@@ -616,6 +682,12 @@
                             "$ref": "#/definitions/http.Error"
                         }
                     },
+                    "401": {
+                        "description": "User unathorized",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
                     "500": {
                         "description": "Server error",
                         "schema": {
@@ -641,7 +713,19 @@
                         }
                     },
                     "400": {
-                        "description": "Client error",
+                        "description": "No such track",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "User unathorized",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "403": {
+                        "description": "User hasn't rights",
                         "schema": {
                             "$ref": "#/definitions/http.Error"
                         }
@@ -678,6 +762,112 @@
                             "$ref": "#/definitions/http.Error"
                         }
                     },
+                    "401": {
+                        "description": "Unauthorized user",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden user",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/users/{userID}/albums": {
+            "get": {
+                "description": "Get user's favorite albums",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Favorite Albums",
+                "responses": {
+                    "200": {
+                        "description": "Albums got",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.AlbumTransfer"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Incorrect input",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized user",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden user",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/users/{userID}/artists": {
+            "get": {
+                "description": "Get user's favorite artists",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Favorite Artists",
+                "responses": {
+                    "200": {
+                        "description": "Artists got",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.ArtistTransfer"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Incorrect input",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized user",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden user",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
                     "500": {
                         "description": "Server error",
                         "schema": {
@@ -703,7 +893,7 @@
                 "parameters": [
                     {
                         "type": "file",
-                        "description": "avatar file",
+                        "description": "Avatar file",
                         "name": "avatar",
                         "in": "formData",
                         "required": true
@@ -718,6 +908,53 @@
                     },
                     "400": {
                         "description": "Invalid form data",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "401": {
+                        "description": "User Unathorized",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "403": {
+                        "description": "User hasn't rights",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Server error",
+                        "schema": {
+                            "$ref": "#/definitions/http.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/users/{userID}/tracks": {
+            "get": {
+                "description": "Get ser's avorite racks",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Favorite Tracks",
+                "responses": {
+                    "200": {
+                        "description": "Tracks got",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.TrackTransfer"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Incorrect input",
                         "schema": {
                             "$ref": "#/definitions/http.Error"
                         }
@@ -792,7 +1029,7 @@
         "http.artistCreateInput": {
             "type": "object",
             "properties": {
-                "avatar": {
+                "cover": {
                     "type": "string"
                 },
                 "name": {
@@ -855,6 +1092,9 @@
             "type": "object",
             "properties": {
                 "albumID": {
+                    "type": "integer"
+                },
+                "albumPosition": {
                     "type": "integer"
                 },
                 "artistsID": {
@@ -962,6 +1202,9 @@
                 "albumID": {
                     "type": "integer"
                 },
+                "albumPosition": {
+                    "type": "integer"
+                },
                 "artists": {
                     "type": "array",
                     "items": {
@@ -972,6 +1215,9 @@
                     "type": "string"
                 },
                 "id": {
+                    "type": "integer"
+                },
+                "listens": {
                     "type": "integer"
                 },
                 "name": {
@@ -985,9 +1231,6 @@
         "models.User": {
             "type": "object",
             "properties": {
-                "avatar": {
-                    "type": "string"
-                },
                 "birthDate": {
                     "$ref": "#/definitions/models.Date"
                 },
