# internal/pkg/user/delivery/http/user_delivery.go
@@ -37,10 +37,10 @@ func NewHandler(uu user.Usecase, tu track.Usecase, alu album.Usecase, aru artist
 // @Description	Get user with chosen ID
 // @Produce		json
 // @Success		200		{object}	models.UserTransfer "User got"
-// @Failure		400		{object}	http.Error	"Client error"
-// @Failure     401    	{object}  	http.Error  "Unauthorized user"
-// @Failure     403    	{object}  	http.Error  "Forbidden user"
-// @Failure     500    	{object}  	http.Error  "Server error"
+// @Failure		400		{object}	http.Error			"Client error"
+// @Failure     401    	{object}  	http.Error  		"Unauthorized user"
+// @Failure     403    	{object}  	http.Error  		"Forbidden user"
+// @Failure     500    	{object}  	http.Error  		"Server error"
 // @Router	    /api/users/{userID}/ [get]
 func (h *Handler) Get(w http.ResponseWriter, r *http.Request) {
 	user, err := h.checkUserAuthAndResponce(w, r)
@@ -99,7 +99,16 @@ func (h *Handler) UploadAvatar(w http.ResponseWriter, r *http.Request) {
 	commonHttp.SuccessResponse(w, uuar, h.logger)
 }
 
-// swaggermock
+// @Summary      Favorite Tracks
+// @Tags         User
+// @Description  Get ser's avorite racks
+// @Produce      application/json
+// @Success      200    {object}  	[]models.TrackTransfer 	"Tracks got"
+// @Failure		 400	{object}	http.Error				"Incorrect input"
+// @Failure      401    {object}  	http.Error  			"Unauthorized user"
+// @Failure      403    {object}  	http.Error  			"Forbidden user"
+// @Failure      500    {object}  	http.Error  			"Server error"
+// @Router       /api/users/{userID}/tracks [get]
 func (h *Handler) GetFavouriteTracks(w http.ResponseWriter, r *http.Request) {
 	user, err := h.checkUserAuthAndResponce(w, r)
 	if err != nil {
@@ -121,7 +130,16 @@ func (h *Handler) GetFavouriteTracks(w http.ResponseWriter, r *http.Request) {
 	commonHttp.SuccessResponse(w, tt, h.logger)
 }
 
-// swaggermock
+// @Summary      Favorite Albums
+// @Tags         User
+// @Description  Get user's favorite albums
+// @Produce      application/json
+// @Success      200    {object}  	[]models.AlbumTransfer 	"Albums got"
+// @Failure		 400	{object}	http.Error				"Incorrect input"
+// @Failure      401    {object}  	http.Error  			"Unauthorized user"
+// @Failure      403    {object}  	http.Error  			"Forbidden user"
+// @Failure      500    {object}  	http.Error  			"Server error"
+// @Router       /api/users/{userID}/albums [get]
 func (h *Handler) GetFavouriteAlbums(w http.ResponseWriter, r *http.Request) {
 	user, err := h.checkUserAuthAndResponce(w, r)
 	if err != nil {
@@ -134,16 +152,25 @@ func (h *Handler) GetFavouriteAlbums(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	resp, err := models.AlbumTransferFromQuery(favAlbums, h.artistServices.GetByAlbum)
+	at, err := models.AlbumTransferFromQuery(favAlbums, h.artistServices.GetByAlbum)
 	if err != nil {
 		commonHttp.ErrorResponseWithErrLogging(w, "error while getting favourite albums", http.StatusInternalServerError, h.logger, err)
 		return
 	}
 
-	commonHttp.SuccessResponse(w, resp, h.logger)
+	commonHttp.SuccessResponse(w, at, h.logger)
 }
 
-// swaggermock
+// @Summary      Favorite Artists
+// @Tags         User
+// @Description  Get user's favorite artists
+// @Produce      application/json
+// @Success      200    {object}  	[]models.ArtistTransfer "Artists got"
+// @Failure		 400	{object}	http.Error				"Incorrect input"
+// @Failure      401    {object}  	http.Error  			"Unauthorized user"
+// @Failure      403    {object}  	http.Error  			"Forbidden user"
+// @Failure      500    {object}  	http.Error  			"Server error"
+// @Router       /api/users/{userID}/artists [get]
 func (h *Handler) GetFavouriteArtists(w http.ResponseWriter, r *http.Request) {
 	user, err := h.checkUserAuthAndResponce(w, r)
 	if err != nil {
@@ -156,9 +183,9 @@ func (h *Handler) GetFavouriteArtists(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	artistsTransfer := models.ArtistTransferFromQuery(favArtists)
+	at := models.ArtistTransferFromQuery(favArtists)
 
-	commonHttp.SuccessResponse(w, artistsTransfer, h.logger)
+	commonHttp.SuccessResponse(w, at, h.logger)
 }
 
 // help func
@@ -168,7 +195,7 @@ func (h *Handler) checkUserAuthAndResponce(w http.ResponseWriter, r *http.Reques
 	user, err := commonHttp.GetUserFromRequest(r)
 	if err != nil {
 		h.logger.Infof("unathorized user: %v", err)
-		commonHttp.ErrorResponse(w, "invalid token", http.StatusUnauthorized, h.logger)
+		commonHttp.ErrorResponse(w, "unathorized", http.StatusUnauthorized, h.logger)
 		return nil, authFailedError
 	}
 
@@ -181,7 +208,7 @@ func (h *Handler) checkUserAuthAndResponce(w http.ResponseWriter, r *http.Reques
 
 	if urlID != user.ID {
 		h.logger.Infof("forbidden user with id #%d", urlID)
-		commonHttp.ErrorResponse(w, "invalid user", http.StatusForbidden, h.logger)
+		commonHttp.ErrorResponse(w, "user has no rights", http.StatusForbidden, h.logger)
 		return nil, authFailedError
 	}
 
